--- a/Home.html
+++ b/Home.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Welcome to my Website</h1>
+    <p>Here I display ui / ux designs for creating and developing web apps</p>
 </body>
 </html>
